# game_engine

./: .gitignore  .gitmodules  CMakeLists.txt  game_engine.sln  premake5.lua
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
game_engine/: CMakeLists.txt  game_engine.vcxproj  game_engine.vcxproj.filters
game_engine/src/: Engine.h
game_engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
game_engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
game_engine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
